--- a/templates/anunciar.html
+++ b/templates/anunciar.html
@@ -8,20 +8,20 @@
   <!-- -----------------------------------------------------------------ESTILOS------------------------------------------------------------------ -->
   <!-- BOOTSTRAP CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- <link href="./style/bootstrap/css/bootstrap.css" rel="Stylesheet"/> -->
+  <!-- <link href="style/bootstrap/css/bootstrap.css" rel="Stylesheet"/> -->
 
   <!-- SWIPER -->
   <link href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" rel="stylesheet">
-  <!-- <link href="./style/swiper/swiper-bundle.css" rel="stylesheet"/> -->
+  <!-- <link href="style/swiper/swiper-bundle.css" rel="stylesheet"/> -->
 
   <!-- @MEDIA -->
-  <link href="./style/mediaStyleBoot.css" rel="Stylesheet" />
+  <link href="style/mediaStyleBoot.css" rel="Stylesheet" />
 
   <!-- FONTAWESOME 6.4.2 ICONS -->
   <script src="https://kit.fontawesome.com/4c7894104f.js" crossorigin="anonymous"></script>
-  <!-- <link href="./style/fontawesome/css/all.css" rel="Stylesheet"/>
-    <link href="./style/fontawesome/css/brands.css" rel="Stylesheet"/>
-    <link href="./style/fontawesome/css/fontawesome.css" rel="Stylesheet"/> -->
+  <!-- <link href="style/fontawesome/css/all.css" rel="Stylesheet"/>
+    <link href="style/fontawesome/css/brands.css" rel="Stylesheet"/>
+    <link href="style/fontawesome/css/fontawesome.css" rel="Stylesheet"/> -->
 </head>
 
 <body>
