--- a/templates/fragmento/destaque.html
+++ b/templates/fragmento/destaque.html
@@ -4,7 +4,7 @@
             <div class="swiper-wrapper col-md-3">
                 <div class="swiper-slide col-md-3">
                     <div class="card-border-light bg-light font-light" style="width: 90%; height: auto;">
-                        <img src="./anuncio/card/card01.png" class="imgDetails img-border-light card-img-top img-fluid"
+                        <img src="anuncio/card/card01.png" class="/imgDetails img-border-light card-img-top img-fluid"
                             alt="...">
                         <div class="card-body bg-light font-light">
                             <h5 class="card-title bg-light font-light">R$2.000.000,00</h5>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="swiper-slide col-md-3">
                     <div class="card-border-light bg-light font-light" style="width: 90%; height: auto;">
-                        <img src="./anuncio/card/card02.png" class="imgDetails img-border-light card-img-top img-fluid"
+                        <img src="anuncio/card/card02.png" class="/imgDetails img-border-light card-img-top img-fluid"
                             alt="...">
                         <div class="card-body bg-light font-light">
                             <h5 class="card-title bg-light font-light">R$2.000.000,00</h5>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="swiper-slide col-md-3">
                     <div class="card-border-light bg-light font-light" style="width: 90%; height: auto;">
-                        <img src="./anuncio/card/card03.png" class="imgDetails img-border-light card-img-top img-fluid"
+                        <img src="anuncio/card/card03.png" class="/imgDetails img-border-light card-img-top img-fluid"
                             alt="...">
                         <div class="card-body bg-light font-light">
                             <h5 class="card-title bg-light font-light">R$2.000.000,00</h5>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="swiper-slide col-md-3">
                     <div class="card-border-light bg-light font-light" style="width: 90%; height: auto;">
-                        <img src="./anuncio/card/card04.png" class="imgDetails img-border-light card-img-top img-fluid"
+                        <img src="anuncio/card/card04.png" class="/imgDetails img-border-light card-img-top img-fluid"
                             alt="...">
                         <div class="card-body bg-light font-light">
                             <h5 class="card-title bg-light font-light">R$2.000.000,00</h5>
@@ -90,12 +90,12 @@
     <div class="card-border-light bg-light font-light" style="width: 100%; height: auto;">
         <div class="row align-items-center">
 
-            <div class="col-4" id="img-anuncio">
+            <div class="col-4" id="/img-anuncio">
                 <div class="close font-light">
                     <a href="#"><i class="fa-thin fa-xmark fa-xl"></i></a>
                 </div>
                 <a href="#img-anuncio">
-                    <img id="detalhes" src="./" class="ms-4 float-start img-border-light card-img-details img-fluid"
+                    <img id="detalhes" src="" class="ms-4 float-start img-border-light card-img-details img-fluid"
                         alt="...">
                 </a>
             </div>
