--- a/templates/fragmento/sobre.html
+++ b/templates/fragmento/sobre.html
@@ -5,7 +5,7 @@
                 <h3 class="main-title">Sobre a Leisuri Imóveis</h3>
             </div>
             <div class="col-md-6 mb-5">
-                <img id="escritorioImg sobre3" class="img-fluid mt-5" src="./imagem/escritorio.png"
+                <img id="escritorioImg sobre3" class="/img-fluid mt-5" src="imagem/escritorio.png"
                     alt="Leisuri Imóveis">
             </div>
             <div class="col-md-6 mt-5">
