--- a/templates/fragmento/time.html
+++ b/templates/fragmento/time.html
@@ -8,7 +8,7 @@
             <div class="swiper-wrapper col-md-3">
                 <div class="swiper-slide col-md-3">
                     <div class="card card-body-time">
-                        <img src="./imagem/Danilo.jpg" class="img-border-light card-img-top img-fluid" alt="Danilo">
+                        <img src="imagem/Danilo.jpg" class="/img-border-light card-img-top img-fluid" alt="Danilo">
                         <div class="card-body text-center">
                             <h5 class="card-title">Danilo da Cruz</h5>
                             <p>Fundador - Front-End/UX</p>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="swiper-slide col-md-3">
                     <div class="card card-body-time">
-                        <img src="./imagem/Enzo.jpg" class="img-border-light card-img-top img-fluid" alt="Enzo">
+                        <img src="imagem/Enzo.jpg" class="/img-border-light card-img-top img-fluid" alt="Enzo">
                         <div class="card-body">
                             <h5 class="card-title">Enzo Brito</h5>
                             <p class="card-text-time">Cofundador - DBA/Back-End</p>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="swiper-slide col-md-3">
                     <div class="card card-body-time">
-                        <img src="./imagem/Esau.jpg" class="img-border-light card-img-top img-fluid" alt="Esau">
+                        <img src="imagem/Esau.jpg" class="/img-border-light card-img-top img-fluid" alt="Esau">
                         <div class="card-body">
                             <h5 class="card-title">Esau Isaac</h5>
                             <p class="card-text-time">Cofundador - DEV</p>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="swiper-slide col-md-3">
                     <div class="card card-body-time">
-                        <img src="./imagem/Marcelo.jpg" class="img-border-light card-img-top img-fluid" alt="Marcelo">
+                        <img src="imagem/Marcelo.jpg" class="/img-border-light card-img-top img-fluid" alt="Marcelo">
                         <div class="card-body">
                             <h5 class="card-title">Marcelo Bezerra</h5>
                             <p class="card-text-time">Cofundador - QA/Back-End</p>
