--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -19,13 +19,13 @@
   <div class="pequeno">
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid ">
-        <img id="mini-home" class="navbar-brand" src="./imagem/mini-home.png" alt="Inicio">
+        <img id="mini-home" class="navbar-brand" src="imagem/mini-home.png" alt="Inicio">
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
           aria-label="Toggle navigation">
           <!-- <span class="navbar-toggler-icon"></span> -->
           <span>
-            <img src="./imagem/Danilo.jpg" alt="" width="32" height="32" class="rounded-circle me-2">
+            <img src="imagem/Danilo.jpg" alt="" width="32" height="32" class="rounded-circle me-2">
           </span>
         </button>
         <div class="collapse navbar-collapse mt-4" id="navbarSupportedContent">
