--- a/leisure/src/main/resources/templates/fragmento/carousel.html
+++ b/leisure/src/main/resources/templates/fragmento/carousel.html
@@ -1,16 +1,16 @@
 <div id="carouselExampleAutoplaying" class="carousel slide mt-2 mx-auto" data-bs-ride="carousel" th:fragment="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="5000">
-      <img th:src="@{/anuncio/anuncio1.png}" class="d-block w-100" alt="Banner">
+      <img src="/anuncio/anuncio1.png" class="d-block w-100" alt="Banner">
     </div>
     <div class="carousel-item" data-bs-interval="5000">
-      <img th:src="@{/anuncio/anuncio2.png}" class="d-block w-100" alt="Banner">
+      <img src="/anuncio/anuncio2.png" class="d-block w-100" alt="Banner">
     </div>
     <div class="carousel-item" data-bs-interval="5000">
-      <img th:src="@{/anuncio/anuncio3.png}" class="d-block w-100" alt="Banner">
+      <img src="/anuncio/anuncio3.png" class="d-block w-100" alt="Banner">
     </div>
     <div class="carousel-item pointer" data-bs-interval="5000">
-      <a href="http://suntech.eco.br" target="_blank"><img th:src="@{/anuncio/anuncio4.png}" class="d-block w-100"
+      <a href="http://suntech.eco.br" target="_blank"><img src="/anuncio/anuncio4.png" class="d-block w-100"
           alt="SunTech"></a>
     </div>
   </div>
