--- a/leisure/src/main/resources/templates/fragmento/duvidas.html
+++ b/leisure/src/main/resources/templates/fragmento/duvidas.html
@@ -7,7 +7,7 @@
       <span class="ms-5">R: Não. É essencial que você tenha um cadastro para trabalhar em seu anúncio.<br></span>
     </div>
     <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-      <img class="me-5" th:src="@{/imagem/newUser.png}" alt="Preciso pagar?" width="300px">
+      <img class="me-5" src="/imagem/newUser.png" alt="Preciso pagar?" width="300px">
     </div>
 
     <div class="Faq col-8 d-flex flex-column justify-content-center mt-3 rounded-start-4 font-light">
@@ -18,7 +18,7 @@
       <span class="ms-5">Fica opcional do usuário adquirir um pacote.</span>
     </div>
     <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-      <img class="me-5" th:src="@{/imagem/money.png}" alt="Preciso pagar?" width="300px">
+      <img class="me-5" src="/imagem/money.png" alt="Preciso pagar?" width="300px">
     </div>
 
     <div class="Faq col-8 d-flex flex-column justify-content-center mt-3 rounded-start-4 font-light">
@@ -29,7 +29,7 @@
       <span class="ms-5">Para que seu anúncio permaneca por mais tempo, é necessário adquirir um pacote.</span>
     </div>
     <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-      <img class="me-5" th:src="@{/imagem/megaFone.png}" alt="Preciso pagar?" width="300px">
+      <img class="me-5" src="/imagem/megaFone.png" alt="Preciso pagar?" width="300px">
     </div>
 
     <div class="Faq col-8 d-flex flex-column justify-content-center mt-3 rounded-start-4 font-light">
@@ -40,7 +40,7 @@
       <span class="ms-5">Vale salientar que anúncios com valores muito atrativos devem ser tratados com cautela.</span>
     </div>
     <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-      <img class="me-5" th:src="@{/imagem/security.png}" alt="Preciso pagar?" width="300px">
+      <img class="me-5" src="/imagem/security.png" alt="Preciso pagar?" width="300px">
     </div>
 
     <div class="Faq col-8 d-flex flex-column justify-content-center mt-3 rounded-start-4 font-light">
@@ -52,7 +52,7 @@
       <!-- <span class="ms-5">Vale salientar que anúncios com valores muito atrativos devem ser tratados com cautela.</span> -->
     </div>
     <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-      <img class="me-5" th:src="@{/imagem/contrato.png}" alt="Preciso pagar?" width="300px">
+      <img class="me-5" src="/imagem/contrato.png" alt="Preciso pagar?" width="300px">
     </div>
   </div>
 </div>
