--- a/leisure/src/main/resources/templates/fragmento/miniMenu.html
+++ b/leisure/src/main/resources/templates/fragmento/miniMenu.html
@@ -79,7 +79,7 @@
 <div class="pequeno" th:fragment="miniMenuAdm">
   <nav class="navbar font-light navbar-expand-lg bg-light">
     <div class="container-fluid ">
-      <img id="mini-home" class="navbar-brand" th:src="@{/imagem/mini-home.png}" alt="Inicio">
+      <img id="mini-home" class="navbar-brand" src="/imagem/mini-home.png" alt="Inicio">
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
