--- a/leisure/src/main/resources/templates/fragmento/scripts.html
+++ b/leisure/src/main/resources/templates/fragmento/scripts.html
@@ -9,7 +9,7 @@
     <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
 
     <!-- JS -->
-    <script th:src="@{/style/ScriptBoot.js}"></script>
+    <script src="/style/ScriptBoot.js"></script>
 
     <script th:inline="javascript">
         // AOS.init();
